--- a/Dashboard.html
+++ b/Dashboard.html
@@ -28,7 +28,7 @@
             </a>
          </div>
          <div class="wellcome">
-              <h2>Wellcome...</h2>
+              <h2>Welcome...</h2>
             <!-- <input type="text"> --> 
          </div>
          <div class="menu">
