--- a/conversion.html
+++ b/conversion.html
@@ -26,7 +26,7 @@
            <a href="https://edvedha.com/" target="_blank"><img src="./edvedha.jpg" alt="" ></a>
         </div>
         <div class="wellcome">
-            <h2>Wellcome...</h2>
+            <h2>Welcome...</h2>
             <!-- <input type="text"> -->
         </div>
         <div class="menu">
