--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
                <a href="https://edvedha.com/" target="_blank"><img src="./edvedha.jpg" alt="" ></a>
             </div>
             <div class="wellcome">
-                <h2>Wellcome...</h2>
+                <h2>Welcome...</h2>
                 
             </div>
             <div class="menu">
