--- a/lead.html
+++ b/lead.html
@@ -1,141 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>conversion</title>
-    <link rel="stylesheet" href="./conversion.js">
-    <link rel="stylesheet" href="./conversion.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>conversion</title>
+  <link rel="stylesheet" href="./conversion.js">
+  <link rel="stylesheet" href="./conversion.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <div class="container">
-       <header class="heard-bar">
-          <div class="we">
-             <i class="fa-solid fa-bars" ></i>
-            </div>
-           <div class="notifi">
-            <i class="fa-regular fa-bell"></i>
-           </div>
-           <div class="pro-pic">
-            <!-- <i class="fa-solid fa-user-plus"></i> -->
-           </div>
-       </header>
-      <div class="aside-bar">
-        <div class="logo">
-           <a href="https://edvedha.com/" target="_blank"><img src="./edvedha.jpg" alt="" ></a>
-        </div>
-        <div class="wellcome">
-            <h2>Wellcome...</h2>
-            <!-- <input type="text"> -->
-        </div>
-        <div class="menu">
-            <ul class="ul">
-              <li class="li">
-                <a href="./Dashboard.html">
-                 <i class="fa-solid fa-house"></i>
-                 <span>Dashboard</span>
-               </a>
-             </li>
-             <li class="li">
-              <a href="./lead.html">
-                  <i class="fa-solid fa-briefcase"></i>  
-                    <span>Leads</span>
-              </a>
-           </li>
-           <li class="li">
-              <a href="./conversion.html">
-                  <i class="fa-solid fa-phone-flip"></i>
-                  <span>Conversion</span>
-              </a>
-           </li>
-           <li class="li">
-              <a href="./prospect.html">
-               <i class="fa-solid fa-users-line"></i>
-                  <span>Prospect</span>
-              </a>
-           </li>
-           <li class="li">
-              <a href="./dynamic.html">
-                  <i class="fa-solid fa-link"></i>
-                  <span>Dynamic Links</span>
-              </a>
-           </li>
-           <li class="li">
-              <a href="./profile.html">
-               <i class="fa-solid fa-user-gear"></i>           
-                  <span>Setting</span>
-              </a>
-           </li>
-           <li class="li">
-            <a href="">
-               <i class="fa-solid fa-circle-question"></i>           
-                <span>Help</span>
-            </a>
-         </li>
-            </ul>
-        </div>
-        <div class="aside-foot">
-          <i class="fa-solid fa-right-from-bracket"></i>
-          <span>Logout</span>
-       </div>
+  <div class="container">
+    <header class="heard-bar">
+      <div class="we">
+        <i class="fa-solid fa-bars"></i>
       </div>
-      <div class="sub-head">
-        <span class="sub-text">Leads</span>
+      <div class="notifi">
+        <i class="fa-regular fa-bell"></i>
       </div>
-      <div class="sub-container">
+      <div class="pro-pic">
+        <!-- <i class="fa-solid fa-user-plus"></i> -->
+      </div>
+    </header>
+    <div class="aside-bar">
+      <div class="logo">
+        <a href="https://edvedha.com/" target="_blank"><img src="./edvedha.jpg" alt=""></a>
+      </div>
+      <div class="wellcome">
+        <h2>Welcome...</h2>
+        <!-- <input type="text"> -->
+      </div>
+      <div class="menu">
+        <ul class="ul">
 
-            <div class="sub-container1">
-              <div class="show">
-               <span>Show</span>
-               <select id="table-size">
-                <option value="10">10</option>
-                <option value="25">25</option>
-                <option value="50">50</option>
-                <option value="100">100</option>
-               </select>
-               <span>entries</span>
-              </div>
-              <div class="search">
-                <input type="text" id="tab_filter" placeholder="Search...">
-                <i class="fa fa-search" id="filter"></i>
-              </div>
-            </div>
-            <div class="sub-container2">
-              <table class="table">
-                <thead>
-                <tr>
-                    <th>SINO</th>
-                    <th>DATE</th>
-                    <th>FULL_NAME</th>
-                    <th>EMAIL</th>
-                    <th>MOBILE_NUMBER</th>
-                    <th>WHATSAPP_NUMBER</th>
-                    <th>COLLEGE_NAME</th>
-                    <th>DEPARTMENT</th>
-                    <th>YEAR_OF_STUDY</th>
-                    <th>DOMAIN</th>
-                    <th>LEAD_STATUS</th>
-                    <th>PAYMENT_STATUS</th> 
-                </tr>
-              </thead>
-              <tbody>
-                  
-              </tbody>
-            </table>
-            </div>
-            <div class="pagination">
-              <div class="entries">
-                <span>showing 1 to 10 of 100 entries</span>
-              </div>
-              <div class="index_buttons">
-              
-              </div>
-            </div>
-      </div>
+          <a href="./Dashboard.html">
+            <li class="li">
+              <i class="fa-solid fa-house"></i>
+              <span>Dashboard</span>
 
+            </li>
+          </a>
+
+          <a href="./lead.html">
+            <li class="li">
+              <i class="fa-solid fa-briefcase"></i>
+              <span>Leads</span>
+
+            </li>
+          </a>
+
+          <a href="./conversion.html">
+            <li class="li">
+              <i class="fa-solid fa-phone-flip"></i>
+              <span>Conversion</span>
+
+            </li>
+          </a>
+
+          <a href="./prospect.html">
+            <li class="li">
+              <i class="fa-solid fa-users-line"></i>
+              <span>Prospect</span>
+
+            </li>
+          </a>
+
+          <a href="./dynamic.html">
+            <li class="li">
+              <i class="fa-solid fa-link"></i>
+              <span>Dynamic Links</span>
+
+            </li>
+          </a>
+
+          <a href="./profile.html">
+            <li class="li">
+              <i class="fa-solid fa-user-gear"></i>
+              <span>Setting</span>
+
+            </li>
+          </a>
+
+          <a href="">
+            <li class="li">
+              <i class="fa-solid fa-circle-question"></i>
+              <span>Help</span>
+
+            </li>
+          </a>
+        </ul>
+      </div>
+      <div class="aside-foot">
+        <i class="fa-solid fa-right-from-bracket"></i>
+        <span>Logout</span>
+      </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./conversion.js"></script>
+    <div class="sub-head">
+      <span class="sub-text">Leads</span>
+    </div>
+    <div class="sub-container">
+
+      <div class="sub-container1">
+        <div class="show">
+          <span>Show</span>
+          <select id="table-size">
+            <option value="10">10</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="100">100</option>
+          </select>
+          <span>entries</span>
+        </div>
+        <div class="search">
+          <input type="text" id="tab_filter" placeholder="Search...">
+          <i class="fa fa-search" id="filter"></i>
+        </div>
+      </div>
+      <div class="sub-container2">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>SINO</th>
+              <th>DATE</th>
+              <th>FULL_NAME</th>
+              <th>EMAIL</th>
+              <th>MOBILE_NUMBER</th>
+              <th>WHATSAPP_NUMBER</th>
+              <th>COLLEGE_NAME</th>
+              <th>DEPARTMENT</th>
+              <th>YEAR_OF_STUDY</th>
+              <th>DOMAIN</th>
+              <th>LEAD_STATUS</th>
+              <th>PAYMENT_STATUS</th>
+            </tr>
+          </thead>
+          <tbody>
+
+          </tbody>
+        </table>
+      </div>
+      <div class="pagination">
+        <div class="entries">
+          <span>showing 1 to 10 of 100 entries</span>
+        </div>
+        <div class="index_buttons">
+
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./conversion.js"></script>
 </body>
+
 </html>
